# nghisweeper

./: CMakeLists.txt
src/: main.cpp
src/console_reader/: CMakeLists.txt  command_reader.hpp  console_reader.cpp  console_reader.hpp
src/game_manager/: CMakeLists.txt  game_manager.cpp  game_manager.hpp
src/global_header/: CMakeLists.txt  global_type.hpp
src/logger/: CMakeLists.txt  file_logger.cpp  file_logger.hpp  log_macro.hpp  logger.hpp
src/mine_field_object/: CMakeLists.txt  mine_field_builder.cpp  mine_field_builder.hpp  mine_field_object.cpp  mine_field_object.hpp
src/renderer/: CMakeLists.txt  console_renderer.cpp  console_renderer.hpp  renderer.hpp
src/user_interface/: CMakeLists.txt  difficulty_ui.cpp  difficulty_ui.hpp  gameplay_ui.cpp  gameplay_ui.hpp  main_menu_ui.cpp  main_menu_ui.hpp  ui.hpp  ui_manager.cpp  ui_manager.hpp
src/utils/: CMakeLists.txt  clock.hpp
test/: test.cpp
